# BioNN

./: .gitignore  README.md  bnn_vs_ann.py  pyproject.toml
bionn/: __init__.py  config.py  runner.py
bionn/benchmarks/: __init__.py  adaptation.py  base.py  classification.py  complexity.py  consciousness.py  continual.py  noise.py  sample_efficiency.py  temporal.py
bionn/metrics/: neuro.py  task.py
bionn/models/: __init__.py  base.py  bnn.py  mlp.py  online.py  snn.py
bionn/reporting/: plots.py  report.py
config/: default.yaml
scripts/: run_all.py
